# research_thyroid

./: Makefile  Pipfile  README.md  main.py  main_legacy.py  requirements.txt  setup.cfg  setup.py  test.py  test_legacy.py
.github/workflows/: pipenv.yml
digitake/: .gitignore  setup.cfg
digitake/src/digitake/gpu_utils/: __init__.py
digitake/src/digitake/model/: model_trainer.py
scripts/: plot_ep_time_from_log.py  plot_log.py
src/: __init__.py  augment.py  callback.py  checkpoint.py  doppler.py  legacy.py  test.py  thyroid_test.py  thyroid_train.py  transform.py  wsdan.py
src/digitake/: __init__.py
src/digitake/labnote/: __init__.py
src/digitake/model/: __init__.py  meter.py  resnet_multichannel.py
src/digitake/model/callbacks/: __init__.py
src/digitake/preprocess/: __init__.py  thyroid.py  thyroid_dataset.py
src/digitake/view/: __init__.py
src/gpu_utils/: __init__.py
src/preprocess/: __init__.py
src/transduction/: __init__.py  helper.py  plot_if.py  vocab.py
src/transduction/vit/: README  mri_data.py  vit_arch.py  vit_torch.py
src/transduction/vit_finetune/: attention.py  main.py  main_supersjgk.py
src/wsdan/: __init__.py  augment.py  checkpoint.py  digitake  metric.py
src/wsdan/demo/: __init__.py  demo_test.py  plot_if.py  stats.py  transform.py  utils.py
src/wsdan/net/: __init__.py  augment.py  doppler.py  net_test.py  net_train.py
tests/digitake/model/: test_average_meter.py
thyroid-analytic-deploy-dev/: Makefile  docker-compose.yml  thyroid-ci-pipeline
