[metadata]
name = research_thyroid_digitake
version = 0.8.19
author = Digitake
author_email = digitake@gmail.com
description = For Thyroid research
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digitake/research_thyroid/
project_urls =
    Bug Tracker = https://github.com/digitake/research_thyroid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
