[metadata]
name = research_thyroid_wsdan
version = 0.3.15
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/research-coders-cs/research_thyroid
project_urls =
    Bug Tracker = https://github.com/research-coders-cs/research_thyroid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
